Completed Day Forum Exercises

--- a/M3W2D1-ssgeek-exercises-pair/SSGeek/Views/Shared/_Layout.cshtml
+++ b/M3W2D1-ssgeek-exercises-pair/SSGeek/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
             <li>@Html.ActionLink("Alien Age", "AlienAge", "Calculators")</li>
             <li>@Html.ActionLink("Alien Weight", "AlienWeight", "Calculators")</li>
             <li>@Html.ActionLink("Alien Travel Time", "AlienTravel", "Calculators")</li>
-            
-
+            <li>@Html.ActionLink("Space Forum", "SpaceForum", "Home")</li>
+            <li>@Html.ActionLink("Space Store", "SpaceStore", "Home")</li>
         </ul>
     </nav>
 
