--- a/M3W2D1-ssgeek-exercises-pair/SSGeek/Views/Shared/_Layout.cshtml
+++ b/M3W2D1-ssgeek-exercises-pair/SSGeek/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <li>@Html.ActionLink("Alien Weight", "AlienWeight", "Calculators")</li>
             <li>@Html.ActionLink("Alien Travel Time", "AlienTravel", "Calculators")</li>
             <li>@Html.ActionLink("Space Forum", "SpaceForum", "Home")</li>
-            <li>@Html.ActionLink("Space Store", "SpaceStore", "Home")</li>
+            <li>@Html.ActionLink("Space Store", "GiftShop", "Home")</li>
         </ul>
     </nav>
 
