--- a/M3W3D4-csharp-capstone/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" type="text/css" href="~/Content/StyleSheet.css">
     <title>@ViewBag.Title</title>
 </head>
 <body>
