--- a/M3W3D4-csharp-capstone/Capstone.Web/Content/StyleSheet.css
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Content/StyleSheet.css
@@ -1,8 +1,31 @@
 ﻿body {
+    background-color: navajowhite;
 }
+header{
+    background-color: navajowhite
+}
+nav {
+    margin-top: 15px;
+}
+a:link, a:visited {
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+
+}
+
 .weatherTable{
     position: relative;
-    left: 500px;
-    bottom: 200px;
+    left: 400px;
+    bottom: 250px;
     text-align: center;
 }
+.todaysWeather{
+    text-align:center;
+    max-width: 500px;
+    position: relative;
+    top: 100px;
+    left: 100px;
+}
+
