Day 2 Finished Survey

--- a/M3W3D4-csharp-capstone/Capstone.Web/Content/StyleSheet.css
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Content/StyleSheet.css
@@ -1,2 +1,36 @@
-﻿body {
+﻿
+.formInputGroup,
+body {
+    width: 90%;
+}
+
+.formInputGroup-radio {
+    width: 50%;
+    margin-bottom: .5em;
+    text-align: left;
+}
+
+.formValidationGroup {
+    width: 90%;
+    margin-bottom: .5em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+.formInputGroup label,
+.formValidationGroup label {
+    display: inline-flex;
+    width: 10em;
+    text-align: left;
+
+    padding-right: 10px;
+}
+
+.formSubmitButton {
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
