--- a/M3W3D4-csharp-capstone/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link rel="StyleSheet" href="~/Content/StyleSheet.css">
 </head>
 <body>
     <header>
