Cleaning up, adding tests

--- a/M3W3D4-csharp-capstone/Capstone.Web/Content/StyleSheet.css
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Content/StyleSheet.css
@@ -1,6 +1,9 @@
 ﻿body {
     background-color: navajowhite;
 }
+*{
+    font-family: 'Palatino Linotype'
+}
 
 header {
     background-color: navajowhite
