--- a/M3W3D4-csharp-capstone/Capstone.Web/Views/Home/Detail.cshtml
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Views/Home/Detail.cshtml
@@ -26,7 +26,7 @@
     </div>
     <br />
     <div style="width: 80%; margin: 0 auto; display: inline-flex;">
-        <table>
+        <table style="border: solid; background-color: white;">
             <tr>
                 <th style="font-weight: bold; text-align: left;">Acreage:</th>
                 <td>@Model.Acres</td>
@@ -57,7 +57,7 @@
                 <td>@Model.AnnualVisitors</td>
             </tr>
             <tr>
-                <th style="font-weight: bold; text-align: left;">Description: </th>
+                <th style="font-weight: bold; text-align: left; vertical-align: top;">Description: </th>
                 <td>@Model.Description</td>
             </tr>
             <tr>
@@ -81,8 +81,7 @@
     <br />
     <br />
     <br />
-    <section style="background-color: white;">
-        <hr style="border-width: 2px; color: black;" />
+    <section style="background-color: white; border: solid;">
 
         <div style="display: inline;" class="todaysWeather">
             <h2 style="position:relative; right: 625px">Today</h2>
