Survey View Changes

--- a/M3W3D4-csharp-capstone/Capstone.Web/Views/Home/Preferences.cshtml
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Views/Home/Preferences.cshtml
@@ -5,14 +5,44 @@
 }
 
 <h2>Preferences</h2>
+<section>
+    @using (Html.BeginForm("Index", "Home", FormMethod.Get))
+    {
 
-@using (Html.BeginForm("Index", "Home", FormMethod.Get))
-{
-    
-    <div>
-        @Html.CheckBox("celsius", false) Would you like to view the temperature in Celsius?
-    </div>
+        <div>
+            @Html.CheckBox("celsius", false) Would you like to view the temperature in Celsius?
+        </div>
+        <br />
+        <button>Submit</button>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+     
+    }
 
-    <button>Submit</button>
-}
-
+</section>
+<section></section>
