--- a/M3W3D4-csharp-capstone/Capstone.Web/Views/Home/SurveyResult.cshtml
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Views/Home/SurveyResult.cshtml
@@ -23,10 +23,7 @@
         {
             
             <li style="font-weight: bold; font-size: 18px; ">@post.FavoritePark</li>
-            <li style="font-size: 12px; padding-bottom: 10px;">by @post.Email</li>
-            <li>@post.Residence</li>
-
-            <li style="padding-bottom: 35px;">@post.ActivityLevel</li>
+            <li style="padding-bottom: 20px;">was voted for <strong>@post.Total</strong> times</li>
         }
     }
 </ul>
