--- a/M3W3D4-csharp-capstone/Capstone.Web/Views/Shared/_Layout.cshtml
+++ b/M3W3D4-csharp-capstone/Capstone.Web/Views/Shared/_Layout.cshtml
@@ -24,5 +24,9 @@
     <div>
         @RenderBody()
     </div>
+    <footer style="vertical-align: bottom;">
+        National Park Geek | Varying Locations | by Corey and Josh
+    </footer>
 </body>
+
 </html>
